# boyd

./: .gitignore  CMakeLists.txt  Readme.md  boyd.cpp  image_color.bsonbind  settings.bsonbind
bson_binds/: blob.bsonbind  channel_data.bsonbind  frame_data.bsonbind  heartbeat.bsonbind  settings.bsonbind
cmake/: FindBSON.cmake  FindBsonBind.cmake  FindDaylite.cmake  FindOpenCV.cmake
include/: boyd_runner.hpp  camera.hpp  camera_config.hpp  channel.hpp  channel_impl.hpp  config.hpp  object.hpp
src/: boyd.cpp  boyd_runner.cpp  camera.cpp  camera_config.cpp  channel.cpp  channel_impl.cpp  config.cpp  object.cpp
test/: test.cpp
